--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>vin's site</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="icon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,17 +15,17 @@
 
     <div class="top-container">
 
-      <img src="images/cloud.png" alt="cloud.png" class="cloud-top">
+      <img src="cloud.png" alt="cloud.png" class="cloud-top">
       <h1><em>I'm Vin</em></h1>
       <h2 class="subtittle">a <span class="pro">pro</span>grammer</h2>
-      <img src="images/cloud.png" alt="cloud.png" class="cloud-down">
-      <img src="images/mountain.png" alt="mountain.png" >
+      <img src="cloud.png" alt="cloud.png" class="cloud-down">
+      <img src="mountain.png" alt="mountain.png" >
 
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images\vin.png" alt="">
+        <img src="vin.png" alt="">
         <h2>Hello.</h2>
         <p class="intro">I am an python & web programmer ,i like bike riding and travelling new place.</p>
       </div>
@@ -33,17 +33,17 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code-img" src="images\code.png" alt="code.png">
+          <img class="code-img" src="code.png" alt="code.png">
           <h3>coding</h3>
           <p>I started coding recently a year ago my first programming language is HTML. currently i am learning python, i have coded some python applications  and websites.  </p>
         </div>
         <div class="skill-row">
-          <img class="adventurer-img" src="images\adventurer.png" alt="adventurer.png">
+          <img class="adventurer-img" src="adventurer.png" alt="adventurer.png">
           <h3>adventures</h3>
           <p> I always like being adventures in my life and i've been twice to himalayas and done trekking,camping,biking etc...    </p>
         </div>
         <div class="skill-row">
-          <img class="cooking-img" src="images\cooking.png" alt="cooking.png">
+          <img class="cooking-img" src="cooking.png" alt="cooking.png">
           <h3>cooking</h3>
           <p>I found this skill recently and i'm doing preety good in it i cooked almost all recipes on weekends , best recipes chilly chicken ,butter chicken , chicken biryani.  </p>
         </div>
