--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/beingvi">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/beingvi">Twitter</a>
+      <a class="footer-link" href="https://www.linkedin.com">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com">Twitter</a>
       <a class="footer-link" href="https://www.facebook.com/beingvin">Facebook</a>
       <p class="copyright">v i n © 2 0 2 1 </p>
     </div>
